Fix chat intro overlap popup modal

--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -192,7 +192,7 @@
   .chat-with-us {
     position: fixed;
     bottom: 19px;
-    z-index: 9999;
+    z-index: 999;
     right: 96px;
     background-color: #002f6c;
     color: white;
